flux/clusters/tokamak/resources/mariadb-galera-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mariadb-galera-prod
