flux/clusters/tokamak/resources/mariadb-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mariadb-prod
