flux/clusters/tokamak/resources/pgsql-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pgsql-prod
