flux/clusters/tokamak/resources/renovate.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: renovate
