flux/clusters/tokamak/resources/envoy-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway-internal
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    labels:
      lb.cilium.io/pool: envoy-gateway-internal
  listeners:
    - name: http
      protocol: HTTP
      #hostname: "*.tokamak.labza"
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      #hostname: "*.tokamak.labza"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            namespace: envoy-gateway-system
            name: envoy-gateway-internal-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway-external
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    labels:
      lb.cilium.io/pool: envoy-gateway-external
  listeners:
    - name: http
      protocol: HTTP
      #hostname: "*.tokamak.labza"
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      #hostname: "*.tokamak.labza"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            namespace: envoy-gateway-system
            name: envoy-gateway-external-cert
