flux/clusters/tokamak/resources/gateway-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - hubble.${cilium_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher
  namespace: cattle-system
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - rancher.${cilium_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rancher
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  namespace: forgejo
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - git.${cilium_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: forgejo-http
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-api
  namespace: garage
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - s3-api.${cilium_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garage
          port: 3900
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-web
  namespace: garage
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - s3-web.${cilium_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garage
          port: 3902
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-ui
  namespace: garage-ui
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - garage-ui.${cilium_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garage-ui
          port: 80
