flux/clusters/tokamak/resources/ingress-hubble.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - hubble.${cilium_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher
  namespace: cattle-system
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - rancher.${cilium_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rancher
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  namespace: forgejo
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - git.${cilium_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: forgejo-http
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - vault.${cilium_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault-active
          port: 8200
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage
  namespace: garage
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - s3-api.${cilium_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garage
          port: 3900
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: envoy-gateway-external
      namespace: envoy-gateway-system
  hostnames:
    - auth.${nginx_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
    - name: envoy-gateway-external
      namespace: envoy-gateway-system
  hostnames:
    - nextcloud.${nginx_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      filters:
        # Security Header (HSTS)
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=31536000; includeSubDomains; preload"
            remove:
              - X-Powered-By
              - Server

        # CORS
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: Access-Control-Allow-Headers
                value: X-Forwarded-For

      backendRefs:
        - name: nextcloud
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: snipeit
  namespace: snipeit
spec:
  parentRefs:
    - name: envoy-gateway-external
      namespace: envoy-gateway-system
  hostnames:
    - wms.${nginx_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: snipe-it-snipeit
          port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: snipeit
  namespace: snipeit
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: snipeit
  oidc:
    provider:
      issuer: "https://auth.${nginx_domain}/application/o/sso-proxy/"
    clientID: "${oauth2_proxy_clientID}"
    clientSecret:
      name: "${oauth2_proxy_clientSecret}"
    redirectURL: "https://sso-proxy.${cilium_domain}/oauth2/callback"
    logoutPath: "/myapp/logout"
