flux/clusters/tokamak/resources/pve-proxy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pve
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: envoy-gateway-external
      namespace: envoy-gateway-system
  hostnames:
    - pve.${external_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: proxmox
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: pve
  namespace: envoy-gateway-system
spec:
  mergeType: StrategicMerge
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: pve
  oidc:
    provider:
      issuer: "https://auth.${external_domain}/realms/${keycloak_realm}"
      authorizationEndpoint: "https://auth.${external_domain}/realms/${keycloak_realm}/protocol/openid-connect/auth"
      tokenEndpoint: "https://auth.${external_domain}/realms/${keycloak_realm}/protocol/openid-connect/token"
    clientID: "${oauth2_proxy_clientID}"
    clientSecret:
      name: sso-oidc-secret
    redirectURL: "https://pve.${external_domain}/oauth2/callback"
    refreshToken: true
