flux/clusters/tokamak/resources/tekton-config.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - tekton.${internal_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tekton-dashboard
          port: 9097
